--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ dependencies {
 
     compileOnly "javax.annotation:jsr250-api:1.0"
 
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.31"
+
     // Glide
     implementation "com.arello-mobile:moxy:$moxyVersion"
     implementation "com.arello-mobile:moxy-app-compat:$moxyVersion"
