--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     def glideVersion = '4.9.0'
     def ciceroneVersion = '5.0.0'
     def androidXVersion = '1.0.0'
-    def room_version = "2.1.0-alpha07"
+    def room_version = "2.1.0-rc01"
     def cameraview_version = "2.0.0-beta05"
     def audioprocessor_version = "1.6.0"
 
