Refactor and fixes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     def glideVersion = '4.9.0'
     def ciceroneVersion = '5.0.0'
     def androidXVersion = '1.0.0'
-    def room_version = "2.1.0-rc01"
+    def room_version = "2.1.0-alpha07"
     def cameraview_version = "2.0.0-beta05"
     def audioprocessor_version = "1.6.0"
 
@@ -88,11 +88,8 @@ dependencies {
 
 
 
-
-    // Room
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:compiler:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
-    implementation "androidx.room:room-rxjava2:$room_version"
-    testImplementation "androidx.room:room-testing:$room_version"
+    implementation "androidx.room:room-runtime:2.1.0-alpha06"
+    implementation "androidx.room:room-ktx:2.1.0-alpha06"
+    implementation "androidx.room:room-rxjava2:2.1.0-alpha06"
+    kapt "androidx.room:room-compiler:2.1.0-alpha06"
 }
